ajustando padding superior en el contenedor del header

--- a/styles/style.css
+++ b/styles/style.css
@@ -502,6 +502,9 @@ html {
         -ms-flex-align: center;
             align-items: center;
   }
+  .header {
+    padding-top: 120px;
+  }
   .header .parrafo {
     width: 628px;
   }
