--- a/styles/style.scss
+++ b/styles/style.scss
@@ -403,6 +403,8 @@ html {
         align-items: center;
     }
     .header {
+        padding-top: 120px;
+
         .parrafo {
             width: 628px;
         }
