--- a/styles/style.css
+++ b/styles/style.css
@@ -202,11 +202,12 @@ html {
   display: block;
 }
 
-.topicos__detail p {
+.topicos__detail figure figcaption {
   font-size: 24px;
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 600;
   text-align: center;
+  padding: 10px 0;
 }
 
 .novedadesContainer {
